--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Josephine
             <span class="text-primary">Kim</span>
           </h1>
-          <div class="subheading mb-5">1469 Rancho Hills Dr. · Chino Hills, CA 91709 · (909) 696-5525 ·
+          <div class="subheading mb-5">2400 Durant Ave., Priestly #806 · Berkeley, CA 94720 · (909) 696-5525 ·
             <a href="mailto:kimjosephine@berkeley.edu">kimjosephine@berkeley.edu</a>
           </div>
           <p class="mb-5">I am an intended Business Administration major at the Haas School of Business at UC Berkeley. I'm interested in the fileds of graphic marketing and consulting.</p>
