--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">2400 Durant Ave., Priestly #806 · Berkeley, CA 94720 · (909) 696-5525 ·
             <a href="mailto:kimjosephine@berkeley.edu">kimjosephine@berkeley.edu</a>
           </div>
-          <p class="mb-5">I am an intended Business Administration major at the Haas School of Business at UC Berkeley. I'm interested in the fileds of graphic marketing and consulting.</p>
+          <p class="mb-5">I am an intended Business Administration major at the Haas School of Business and intended Computer Science minor at the College of Letters & Science at UC Berkeley. I'm interested in the fields of graphic marketing and consulting.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -115,12 +115,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Yearbook Editor-in-Chielf</h3>
-              <div class="subheading mb-3">Diamond Bar High School</div>
-              <p>Led a class of 40 people in creating a 400 page yearbook. Worked mainly in editing copy writing and designing the cover and opening pages.</p>
+              <h3 class="mb-0">CS Kickstart Participant</h3>
+              <div class="subheading mb-3">UC Berkeley</div>
+              <p>One of 56 girls that were chosen to attend a week long CS program sponsered by companies like Google, GoDaddy, and Cloudera.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2015 - May 2018</span>
+              <span class="text-primary">August 2018</span>
             </div>
           </div>
 
@@ -131,29 +131,51 @@
               <p>Designed digital flyers for multiple social media platforms.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">August 2018 - January 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Student Representative</h3>
+              <div class="subheading mb-3">AP/Collegeboard</div>
+              <p>Worked in AP with WE program to kickstart a nonprofit project to raise awareness of the struggle that women go through in developing countries. Specifically, I collaborated with a girls' orphanage in Nepal and raised funds to support their eduation. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">November 2017 - April 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Founder</h3>
+              <div class="subheading mb-3">The Word of Mouth</div>
+              <p>Created short documentaries and wrote articles to shed a more positive light on LA's homeless population. Also spoke about this project at WE Day 2018 California at the Los Angeles Forum in front of 18,000 selected students.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2016 - March 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Yearbook Editor-in-Chief</h3>
+              <div class="subheading mb-3">Diamond Bar High School</div>
+              <p>Led a class of 40 people in creating a 400 page yearbook. Worked mainly in editing copy writing and designing the cover and opening pages. Awarded Best Adobe Designer at the Herff Jones Yearbook Camp, 1st place in opening cover design at the 2017 Herff Jones Yearbook Sweepstakes, and gold crown for the 2017 Taurus 'In Our Element' from the Columbia press.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2016 - May 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">Summer Journalism Intern</h3>
+              <div class="subheading mb-3">NPR/The Macon Telegraph</div>
+              <p>Created short spotlight documentaries on the musicians in the city of Macon, Georgia. Worked alongside professors from Mercer University's Center for Collaborative Journalism.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">July 2017</span>
             </div>
           </div>
 
@@ -165,26 +187,14 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Diamond Bar High School</h3>
+              <div class="subheading mb-3">Class of 2018 Committee</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">August 2014 - May 2018</span>
             </div>
           </div>
 
@@ -253,8 +263,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>Apart from being an aspiring businesswoman and philanthropist, I enjoy learning how to graphic design through Youtube videos, swimming, and playing the viola.</p>
+          <p class="mb-0">I am also an aspiring filmmaker, and I've currently been spending a large amount of my free time learning Adobe Premiere and FInal Cut Pro X.</p>
         </div>
       </section>
 
@@ -264,31 +274,20 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              We Day 2018 Speaker</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              Snapchat Geofilter Designer</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+              Place - Herff Jones Company Writeoff Sweepstakes</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
+              Mercer University CC Journalism Scholar</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Walnut Valley Educational Foundation Philanthropy Scholar</li>
           </ul>
         </div>
       </section>
