--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">2400 Durant Ave., Priestly #806 · Berkeley, CA 94720 · (909) 696-5525 ·
             <a href="mailto:kimjosephine@berkeley.edu">kimjosephine@berkeley.edu</a>
           </div>
-          <p class="mb-5">I am an intended Business Administration major at the Haas School of Business and intended Computer Science minor at the College of Letters & Science at UC Berkeley. I'm interested in the fields of graphic marketing and consulting.</p>
+          <p class="mb-5">I am an intended Business Administration major at the Haas School of Business and intended Computer Science minor at the College of Letters & Science at UC Berkeley.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
